fixed contrast issue in footer

--- a/css/style.css
+++ b/css/style.css
@@ -121,5 +121,5 @@ h1 span.text-accent {
 footer.footer {
     padding: 2.5em 0;
     font-size: 12px;
-    color: #777;
+    color: #666;
 }
